--- a/index.html
+++ b/index.html
@@ -1,2 +1,6 @@
 <title>Alan Haugen</title>
-Hello World
+Alan Whitburn Haugen's personal website
+
+I am interested in Computer Graphics, Games, Music, Drawing, Stories, Computer Vision and Mathematics.
+
+I am currently learning more about Computer Graphics, I am writing a raytracer.
