Added raytracer to repo with image in index

--- a/index.html
+++ b/index.html
@@ -4,3 +4,5 @@ Alan Whitburn Haugen's personal website
 I am interested in Computer Graphics, Games, Music, Drawing, Stories, Computer Vision and Mathematics.
 
 I am currently learning more about Computer Graphics, I am writing a raytracer.
+
+<img src="img.ppm">
