Added heading and paragraphs, converted image

--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <title>Alan Haugen</title>
+<h3>
 Alan Whitburn Haugen's personal website
+</h3>
 
+<p>
 I am interested in Computer Graphics, Games, Music, Drawing, Stories, Computer Vision and Mathematics.
 
+<p>
 I am currently learning more about Computer Graphics, I am writing a raytracer.
 
-<img src="img.ppm">
+<p>
+<img src="img.png">
