--- a/index.html
+++ b/index.html
@@ -1,8 +1,31 @@
 <title>Alan Haugen</title>
+<style>
+/*#profile {
+  margin: auto;
+  width: 25%;
+  border: 3px solid green;
+  padding: 10px;
+}*/
+#profile {
+  float: right;
+  width: 25%;
+  border: 3px solid ;/*#73AD21;*/
+  padding: 10px;
+}
+#content {
+  float: left;
+  width: 60%;
+  border: 3px solid ;/*#73AD21;*/
+  padding: 10px;
+}
+</style>
+<div id="profile">
+<img src="profile.jpg">
+</div>
+<div id=content>
 <h3>
 Alan Whitburn Haugen's personal website
 </h3>
-
 <p>
 I am interested in Computer Graphics, Games, Music, Drawing, Stories, Computer Vision and Mathematics.
 
@@ -11,3 +34,4 @@ I am currently learning more about Computer Graphics, I am writing a raytracer.
 
 <p>
 <img src="img.png">
+</div>
