Fleshing out vector class. Addded favicon

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <title>Alan Haugen</title>
+<link rel="icon" 
+      type="image/png" 
+      href="img.png" />
 <style>
 /*#profile {
   margin: auto;
@@ -8,7 +11,7 @@
 }*/
 #profile {
   float: right;
-  width: 25%;
+  width: 35%;
   border: 3px solid ;/*#73AD21;*/
   padding: 10px;
 }
@@ -30,7 +33,7 @@ Alan Whitburn Haugen's personal website
 I am interested in Computer Graphics, Games, Music, Drawing, Stories, Computer Vision and Mathematics.
 
 <p>
-I am currently learning more about Computer Graphics, I am writing a raytracer.
+I am currently learning more about Computer Graphics, I am writing a pathtracer.
 
 <p>
 <img src="img.png">
