Improved profile picture

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   width: 35%;
   border: 3px solid ;/*#73AD21;*/
   padding: 10px;
+  content:url(profile.jpg)
 }
 #content {
   float: left;
@@ -35,6 +36,4 @@ I am currently learning more about Computer Graphics, I am writing a pathtracer.
 <p>
 <img src="img.png">
 </div>
-<div id="profile">
-<img src="profile.jpg">
-</div>
+<div id="profile"></div>
