Updated website with skeleton

--- a/index.html
+++ b/index.html
@@ -1,39 +1,51 @@
-<title>Alan Haugen</title>
-<link rel="icon" 
-      type="image/png" 
-      href="img.png" />
-<style>
-/*#profile {
-  margin: auto;
-  width: 25%;
-  border: 3px solid green;
-  padding: 10px;
-}*/
-#profile {
-  float: right;
-  width: 35%;
-  border: 3px solid ;/*#73AD21;*/
-  padding: 10px;
-  content:url(profile.jpg)
-}
-#content {
-  float: left;
-  width: 60%;
-  border: 3px solid ;/*#73AD21;*/
-  padding: 10px;
-}
-</style>
-<div id=content>
-<h3>
-Alan Whitburn Haugen's personal website
-</h3>
-<p>
-I am interested in Computer Graphics, Games, Music, Drawing, Stories, Computer Vision and Mathematics.
+<!DOCTYPE html>
+<html lang="en">
+<head>
 
-<p>
-I am currently learning more about Computer Graphics, I am writing a pathtracer.
+  <!-- Basic Page Needs
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta charset="utf-8">
+  <title>Alan Haugen</title>
+  <meta name="description" content="">
+  <meta name="author" content="Alan Whitburn Haugen">
 
-<p>
-<img src="img.png">
-</div>
-<div id="profile"></div>
+  <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- FONT
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+
+  <!-- CSS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+
+  <!-- Favicon
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="icon" type="image/png" href="images/img.png">
+
+</head>
+<body>
+
+  <!-- Primary Page Layout
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <div class="container">
+    <div class="row">
+      <div class="two-thirds column" style="margin-top: 25%">
+        <h4>Alan Whitburn Haugen's personal website</h4>
+        <p>I am interested in Computer Graphics, Games, Music, Drawing, Stories, Computer Vision and Mathematics.</p>
+        <p>I am currently learning more about Computer Graphics, I am writing a pathtracer.</p>
+        <p><img src="images/img.png"></p>
+      </div>
+      <div class="one-third column portrait">
+        <img src="images/profile.jpg" alt="img" >
+      </div>
+    </div>
+  </div>
+
+<!-- End Document
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+</body>
+</html>
