--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>Alan Haugen</title>
-  <meta name="description" content="">
+  <meta name="description" content="Alan Whitburn Haugen's personal website">
   <meta name="author" content="Alan Whitburn Haugen">
 
   <!-- Mobile Specific Metas
@@ -36,7 +36,7 @@
       <div class="two-thirds column" style="margin-top: 25%">
         <h4>Alan Whitburn Haugen's personal website</h4>
         <p>I am interested in Computer Graphics, Games, Music, Drawing, Stories, Computer Vision and Mathematics.</p>
-        <p>I am currently learning more about Computer Graphics, I am writing a pathtracer.</p>
+        <p>I am currently learning more about Computer Graphics, I am writing a path tracer.</p>
         <p><img src="images/img.png"></p>
       </div>
       <div class="one-third column portrait">
