Complete change of site... Was much better without jenkins :)

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/img.png">
+  <link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/u/1408981?v=4">
 
 </head>
 <body>
@@ -36,11 +36,11 @@
       <div class="two-thirds column" style="margin-top: 25%">
         <h4>Alan Whitburn Haugen's personal website</h4>
         <p>I am interested in Computer Graphics, Games, Music, Drawing, Stories, Computer Vision and Mathematics.</p>
-        <p>I am currently learning more about Computer Graphics, I am writing a path tracer.</p>
-        <p><img src="images/img.png"></p>
+        <p>I am currently learning more about Games Programming, I am writing a chess game.</p>
+        <p><img src="https://github.com/alanhaugen/chess/raw/master/output.gif"></p>
       </div>
       <div class="one-third column portrait">
-        <img src="images/profile.jpg" alt="img" >
+        <img src="https://avatars.githubusercontent.com/u/1408981?v=4" alt="img" >
       </div>
     </div>
   </div>
