--- a/index.html
+++ b/index.html
@@ -1,51 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
 
-  <!-- Basic Page Needs
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta charset="utf-8">
-  <title>Alan Haugen</title>
-  <meta name="description" content="Alan Whitburn Haugen's personal website">
-  <meta name="author" content="Alan Whitburn Haugen">
+      <!-- Basic Page Needs
+      –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+      <meta charset="utf-8">
+      <title>Alan Haugen</title>
+      <meta name="description" content="Alan Whitburn Haugen's personal website">
+      <meta name="author" content="Alan Whitburn Haugen">
 
-  <!-- Mobile Specific Metas
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+      <!-- Mobile Specific Metas
+      –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+      <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- FONT
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+      <!-- FONT
+      –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+      <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 
-  <!-- CSS
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
+      <!-- CSS
+      –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+      <link rel="stylesheet" href="css/normalize.css">
+      <link rel="stylesheet" href="css/skeleton.css">
 
-  <!-- Favicon
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/u/1408981?v=4">
+      <!-- Favicon
+      –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+      <link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/u/1408981?v=4">
 
-</head>
-<body>
+  </head>
+  <body>
 
-  <!-- Primary Page Layout
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
-    <div class="row">
-      <div class="two-thirds column" style="margin-top: 25%">
-        <h4>Alan Whitburn Haugen's personal website</h4>
-        <p>I am interested in Computer Graphics, Games, Music, Drawing, Stories, Computer Vision and Mathematics.</p>
-        <p>I am currently learning more about Games Programming, I am writing a chess game.</p>
-        <p><img src="https://github.com/alanhaugen/chess/raw/master/output.gif"></p>
+    <!-- Primary Page Layout
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <div class="container">
+      <div class="row">
+        <div class="two-thirds column" style="margin-top: 25%">
+
+          <h4>Alan Whitburn Haugen's personal website</h4>
+
+          <p>I enjoy Computer Graphics, Games, Music, Drawing, Stories, Computer Vision, Mathematics, and playing with my Greenland Dog, Sarek.</p>
+          <p>I am a biotechnologist. I have done work on <a>cultured meat</a> and <a>computer vision</a>. I have previously worked in the games industry.</p>
+          <p><a href=https://github.com/alanhaugen/chess><img src="https://github.com/alanhaugen/chess/raw/master/output.gif"></a></p>
+        </div>
+
+        <div class="one-third column portrait">
+          <img src="https://avatars.githubusercontent.com/u/1408981?v=4" alt="img" >
+        </div>
       </div>
-      <div class="one-third column portrait">
-        <img src="https://avatars.githubusercontent.com/u/1408981?v=4" alt="img" >
+
+      <div class="row">
+        <div class="two-thirds column">
+
+          <h5>Publications</h5>
+
+          <a href=https://ntnuopen.ntnu.no/ntnu-xmlui/handle/11250/3037560>Expansion of bovine skeletal muscle cells in a lab-bench bioreactor using edible microcarriers made of eggshell membrane</a> Master thesis - NTNU 2022
+          </br>
+          <a href=https://ntnuopen.ntnu.no/ntnu-xmlui/handle/11250/2664006>Bruk av maskinsyn for automatisk telling og artsbestemmelse av villfisk som beiter under oppdrettsmerder</a> Bachelor thesis - NTNU 2020
+
+        </div>
+
+        <div class="one-third column portrait">
+          <h5>Find me.</h5>
+            <a href=kaggle.com/alanhaugen>kaggle.com/alanhaugen</a> 
+            </br>
+            <a href=github.com/alanhaugen>github.com/alanhaugen</a> 
+            </br>
+            <a href=linkedin.com/in/alanhaugen>linkedin.com/in/alanhaugen</a> 
+            </br>
+            <a href=twitter.com/alanwhaugen>twitter.com/alanwhaugen</a> 
+          </div>
+        </div>
       </div>
     </div>
-  </div>
 
-<!-- End Document
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-</body>
+    <!-- End Document
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  </body>
 </html>
