fixed find me links

--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
 
         <div class="one-third column portrait">
           <h5>Find me.</h5>
-            <a href=kaggle.com/alanhaugen>kaggle.com/alanhaugen</a> 
+            <a href=https://kaggle.com/alanhaugen>kaggle.com/alanhaugen</a> 
             </br>
-            <a href=github.com/alanhaugen>github.com/alanhaugen</a> 
+            <a href=https://github.com/alanhaugen>github.com/alanhaugen</a> 
             </br>
-            <a href=linkedin.com/in/alanhaugen>linkedin.com/in/alanhaugen</a> 
+            <a href=https://linkedin.com/in/alanhaugen>linkedin.com/in/alanhaugen</a> 
             </br>
-            <a href=twitter.com/alanwhaugen>twitter.com/alanwhaugen</a> 
+            <a href=https://twitter.com/alanwhaugen>twitter.com/alanwhaugen</a> 
           </div>
         </div>
       </div>
