Added my cv to the site

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="one-third column portrait">
-          <img src="https://avatars.githubusercontent.com/u/1408981?v=4" alt="img" >
+          <a href=cv.pdf><img src="https://avatars.githubusercontent.com/u/1408981?v=4" alt="img" ></a>
         </div>
       </div>
 
