--- a/index.html
+++ b/index.html
@@ -2,29 +2,29 @@
 <html lang="en">
   <head>
 
-      <!-- Basic Page Needs
-      –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-      <meta charset="utf-8">
-      <title>Alan Haugen</title>
-      <meta name="description" content="Alan Whitburn Haugen's personal website">
-      <meta name="author" content="Alan Whitburn Haugen">
+    <!-- Basic Page Needs
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <meta charset="utf-8">
+    <title>Alan Haugen</title>
+    <meta name="description" content="Alan Whitburn Haugen's personal website">
+    <meta name="author" content="Alan Whitburn Haugen">
 
-      <!-- Mobile Specific Metas
-      –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-      <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Mobile Specific Metas
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <!-- FONT
-      –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-      <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+    <!-- FONT
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 
-      <!-- CSS
-      –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-      <link rel="stylesheet" href="css/normalize.css">
-      <link rel="stylesheet" href="css/skeleton.css">
+    <!-- CSS
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/skeleton.css">
 
-      <!-- Favicon
-      –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-      <link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/u/1408981?v=4">
+    <!-- Favicon
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/u/1408981?v=4">
 
   </head>
   <body>
@@ -35,22 +35,29 @@
       <div class="row">
         <div class="two-thirds column" style="margin-top: 25%">
 
-          <h4>Alan Whitburn Haugen's personal website</h4>
+          <h4>Alan Whitburn Haugen's <span class="heading-font-size">personal website</span></h4>
 
           <p>I enjoy Computer Graphics, Games, Music, Drawing, Stories, Computer Vision, Mathematics, and playing with my Greenland Dog, Sarek.</p>
           <p>I am a biotechnologist. I have done work on <a>cultured meat</a> and <a>computer vision</a>. I have previously worked in the games industry.</p>
+
+          <h5>Gallery</h5>
+
           <p><a href=https://github.com/alanhaugen/chess><img src="https://github.com/alanhaugen/chess/raw/master/output.gif"></a></p>
         </div>
 
+        <!-- Side column
+        –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <div class="one-third column portrait">
-          <a href=cv.pdf><img src="https://avatars.githubusercontent.com/u/1408981?v=4" alt="img" ></a>
+          <a href=cv.pdf><img src=images/cv.png style="width:50px"></a>
+          <a href=#publications><img src=images/publications.png style="width:50px"></a>
+          <a href="mailto:alanhaugen@gmail.com"><img src=images/contact.png style="width:50px"></a>
         </div>
       </div>
 
       <div class="row">
         <div class="two-thirds column">
 
-          <h5>Publications</h5>
+          <h5 id=publications>Publications</h5>
 
           <a href=https://ntnuopen.ntnu.no/ntnu-xmlui/handle/11250/3037560>Expansion of bovine skeletal muscle cells in a lab-bench bioreactor using edible microcarriers made of eggshell membrane</a> Master thesis - NTNU 2022
           </br>
