Github icon and link added

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <div class="one-third column portrait">
           <a href=cv.pdf><img src=images/cv.png style="width:50px"></a>
           <a href=#publications><img src=images/publications.png style="width:50px"></a>
+          <a href=https://github.com/alanhaugen><img src=images/github-mark.png style="width:50px"></a>
           <a href="mailto:alanhaugen@gmail.com"><img src=images/contact.png style="width:50px"></a>
         </div>
       </div>
