Added some information about recent developments

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
           <h4>Alan Whitburn Haugen's <span class="heading-font-size">personal website</span></h4>
 
-          <p>I enjoy Computer Graphics, Games, Music, Drawing, Stories, Computer Vision, Mathematics, and playing with my Greenland Dog, Sarek.</p>
-          <p>I am a biotechnologist. I have done work on <a>cultured meat</a> and <a>computer vision</a>. I have previously worked in the games industry.</p>
+          <p>I enjoy Computer Graphics, Games, Music, Drawing, Stories, Computer Vision and Mathematics.</p>
+          <p>I am now a student again. I recently did a MSc on <a>cultured meat</a> and a BA involving <a>computer vision</a>. I am now trying to do another bachelor, this time on games.</p>
 
           <h5>Gallery</h5>
 
