Added image of minigames to repo

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <h5>Gallery</h5>
 
           <p><a href=https://github.com/alanhaugen/chess><img src="https://github.com/alanhaugen/chess/raw/master/output.gif"></a></p>
-          <p><a href=https://www.gamebrew.org/wiki/AE_Mini_Game_Collection><img src="https://www.gamebrew.org/images/3/3a/Aeminigame6.png"></a></p>
+          <p><a href=https://www.gamebrew.org/wiki/AE_Mini_Game_Collection><img src="images/Aeminigame6.png"></a></p>
         </div>
 
         <!-- Side column
