Made todo software, will so what I can develop with js

--- a/todo.html
+++ b/todo.html
@@ -1,3 +1,5 @@
+<html>
+<link rel="stylesheet" href="air.css">
 <h1 id="inbox">Inbox</h1>
 <p>[ ] gamedev.tv [ ] udemy.com</p>
 <h1 id="action">Action</h1>
@@ -5,7 +7,7 @@
 <h1 id="due-dates">Due dates</h1>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" checked="" />
-Compulsory 1 -&gt; 1-september-2023 #programming-I</li>
+Compulsory 1 -&gt; 1-september-2023 #programming-I {#foo}</li>
 <li><input type="checkbox" disabled="" />
 Oblig 1 -&gt; 18-september-2023 #mathematics-I</li>
 <li><input type="checkbox" disabled="" />
@@ -29,3 +31,4 @@ Written exam -&gt; 6-december-2023 #programming-I</li>
 <li><input type="checkbox" disabled="" />
 Written exam -&gt; 11-december-2023 #mathematics-I</li>
 </ul>
+</html>
