Changed style of todo list and added calendar to todolist

--- a/todo.html
+++ b/todo.html
@@ -1,5 +1,31 @@
-<html>
-<link rel="stylesheet" href="air.css">
+<html lang=en>
+
+<head>
+    <!-- FONT
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+
+    <!-- CSS
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/skeleton.css">
+
+    <!-- Favicon
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/u/1408981?v=4">
+		<meta charset="utf-8">
+		<title>AlOrganizer</title>
+		<!-- jsCalendar v1.4.4 Javascript and CSS -->
+		<script src="https://cdn.jsdelivr.net/npm/simple-jscalendar@1.4.4/source/jsCalendar.min.js" integrity="sha384-0LaRLH/U5g8eCAwewLGQRyC/O+g0kXh8P+5pWpzijxwYczD3nKETIqUyhuA8B/UB" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-jscalendar@1.4.4/source/jsCalendar.min.css" integrity="sha384-44GnAqZy9yUojzFPjdcUpP822DGm1ebORKY8pe6TkHuqJ038FANyfBYBpRvw8O9w" crossorigin="anonymous">
+	</head>
+
+
+	<body>
+    <div class="container">
+      <div class="row">
+        <div class="seven columns" style="margin-top: 25%">
+
 <h1 id="inbox">Inbox</h1>
 <p>[ ] gamedev.tv [ ] udemy.com</p>
 <h1 id="action">Action</h1>
@@ -31,4 +57,13 @@ Written exam -&gt; 6-december-2023 #programming-I</li>
 <li><input type="checkbox" disabled="" />
 Written exam -&gt; 11-december-2023 #mathematics-I</li>
 </ul>
-</html>
+
+        </div>
+        <div class="five columns portrait" style="margin-top: 15%">
+            <!-- Calendar Element -->
+            <div class="auto-jsCalendar"></div>
+        </div>
+     </div>
+  </div>
+
+</body></html>
