--- a/todo.html
+++ b/todo.html
@@ -26,10 +26,16 @@
       <div class="row">
         <div class="seven columns" style="margin-top: 25%">
 
+<h6 id="organize-each-day-triage.-then-weekly-big-picture">Organize each day (triage). Then weekly (big picture)</h6>
 <h1 id="inbox">Inbox</h1>
+<h6 id="update-in-the-morning">Update in the morning</h6>
 <p>[ ] gamedev.tv [ ] udemy.com</p>
 <h1 id="action">Action</h1>
-<p>[Actions] #hashtags</p>
+<h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
+<ul class="task-list">
+<li><input type="checkbox" disabled="" />
+Look at “Getting things done” book #computer</li>
+</ul>
 <h1 id="due-dates">Due dates</h1>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" checked="" />
@@ -60,8 +66,60 @@ Written exam -&gt; 11-december-2023 #mathematics-I</li>
 
         </div>
         <div class="five columns portrait" style="margin-top: 15%">
+
+
+<div id="calendar"></div>
+<!-- Create the calendar -->
+<script type="text/javascript">
+    // Get the element
+    var element = document.getElementById("calendar");
+    // Create the calendar
+    var myCalendar = jsCalendar.new(element);
+    myCalendar.previous();
+</script>
+
+ 
             <!-- Calendar Element -->
             <div class="auto-jsCalendar"></div>
+
+
+<div id="my-calendar"></div>
+<!-- Create the calendar -->
+<script type="text/javascript">
+    // Get the element
+    var element = document.getElementById("my-calendar");
+    // Create the calendar
+    var myCalendar = jsCalendar.new(element);
+    myCalendar.next();
+</script>
+
+
+<div id="mycalendar"></div>
+<!-- Create the calendar -->
+<script type="text/javascript">
+    // Get the element
+    var element = document.getElementById("mycalendar");
+    // Create the calendar
+    var myCalendar = jsCalendar.new(element);
+    myCalendar.next();
+    myCalendar.next();
+</script>
+
+
+<div id="mcalendar"></div>
+<!-- Create the calendar -->
+<script type="text/javascript">
+    // Get the element
+    var element = document.getElementById("mcalendar");
+    // Create the calendar
+    var myCalendar = jsCalendar.new(element);
+    myCalendar.next();
+    myCalendar.next();
+    myCalendar.next();
+</script>
+
+
+
         </div>
      </div>
   </div>
