Tried making it tidy

--- a/todo.html
+++ b/todo.html
@@ -28,13 +28,20 @@
 
 <h6 id="organize-each-day-triage.-then-weekly-big-picture">Organize each day (triage). Then weekly (big picture)</h6>
 <h1 id="inbox">Inbox</h1>
+<ul class="task-list">
+<li><input type="checkbox" disabled="" />
+Go to Mathematics lecture #campus #now</li>
+</ul>
 <h6 id="update-in-the-morning">Update in the morning</h6>
-<p>[ ] gamedev.tv [ ] udemy.com</p>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
 Look at “Getting things done” book #computer</li>
+<li><input type="checkbox" disabled="" />
+gamedev.tv #computer #plan</li>
+<li><input type="checkbox" disabled="" />
+udemy.com #computer #plan</li>
 </ul>
 <h1 id="due-dates">Due dates</h1>
 <ul class="task-list">
