Looked into book

--- a/todo.html
+++ b/todo.html
@@ -30,8 +30,6 @@
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
-Look into 7. sans book #library</li>
-<li><input type="checkbox" disabled="" />
 Make matpakke #home</li>
 </ul>
 <h1 id="action">Action</h1>
@@ -41,6 +39,8 @@ Make matpakke #home</li>
 Go to Mathematics lecture #campus #now</li>
 <li><input type="checkbox" disabled="" checked="" />
 Look at “Getting things done” book #computer</li>
+<li><input type="checkbox" disabled="" checked="" />
+Look into 7. sans book #library</li>
 <li><input type="checkbox" disabled="" />
 gamedev.tv #computer #plan</li>
 <li><input type="checkbox" disabled="" />
