--- a/todo.html
+++ b/todo.html
@@ -31,6 +31,8 @@
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
 Make matpakke #home</li>
+<li><input type="checkbox" disabled="" />
+Put glasses in sack #home</li>
 </ul>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
@@ -53,7 +55,7 @@ Do oblig 1</li>
 <h1 id="due-dates">Due dates</h1>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" checked="" />
-Compulsory 1 -&gt; 1-september-2023 #programming-I {#foo}</li>
+Compulsory 1 -&gt; 1-september-2023 #programming-I</li>
 <li><input type="checkbox" disabled="" />
 Oblig 1 -&gt; 18-september-2023 #mathematics-I</li>
 <li><input type="checkbox" disabled="" />
