--- a/todo.html
+++ b/todo.html
@@ -43,12 +43,12 @@ Go to Mathematics lecture #campus #now</li>
 Look at “Getting things done” book #computer</li>
 <li><input type="checkbox" disabled="" checked="" />
 Look into 7. sans book #library</li>
+<li><input type="checkbox" disabled="" checked="" />
+Do derivation assignment</li>
 <li><input type="checkbox" disabled="" />
 gamedev.tv #computer #plan</li>
 <li><input type="checkbox" disabled="" />
 udemy.com #computer #plan</li>
-<li><input type="checkbox" disabled="" />
-Do derivation assignment</li>
 <li><input type="checkbox" disabled="" />
 Do oblig 1</li>
 </ul>
