Fixed some of the markdown. Must have been some strange unicode chars in there

--- a/todo.html
+++ b/todo.html
@@ -28,11 +28,13 @@
 
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
-<ul>
-<li>[ ] Do a lecture in Blender Character Creator v2.0 for Video Games Design Course</li>
+<ul class="task-list">
 <li><input type="checkbox" disabled="" />
-Do a lecture in Complete Blender Creator 3: Learn 3D Modelling for Beginners</li>
-<li>[ ] Do a lecture in Piano4All</li>
+Blender Character Creator v2.0 for Video Games Design Course</li>
+<li><input type="checkbox" disabled="" />
+Complete Blender Creator 3: Learn 3D Modelling for Beginners</li>
+<li><input type="checkbox" disabled="" />
+Piano4All</li>
 <li><input type="checkbox" disabled="" />
 Make a game related GitHub commit</li>
 </ul>
