--- a/todo.html
+++ b/todo.html
@@ -37,6 +37,10 @@ Complete Blender Creator 3: Learn 3D Modelling for Beginners</li>
 Piano4All</li>
 <li><input type="checkbox" disabled="" />
 Make a game related GitHub commit</li>
+<li><input type="checkbox" disabled="" />
+Read a book 20 minutes</li>
+<li><input type="checkbox" disabled="" />
+Go for a long walk early</li>
 </ul>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
@@ -53,7 +57,7 @@ Do derivation assignment</li>
 gamedev.tv #computer #plan</li>
 <li><input type="checkbox" disabled="" checked="" />
 udemy.com #computer #plan</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Make matpakke #home</li>
 <li><input type="checkbox" disabled="" />
 Put glasses in sack #home</li>
