Put my glasses in my sack. Will now take a shower and then see if I can do some maths for 21:00 then sleep

--- a/todo.html
+++ b/todo.html
@@ -59,7 +59,7 @@ gamedev.tv #computer #plan</li>
 udemy.com #computer #plan</li>
 <li><input type="checkbox" disabled="" checked="" />
 Make matpakke #home</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Put glasses in sack #home</li>
 <li><input type="checkbox" disabled="" />
 Do oblig 1</li>
