Getting ready for tomorrow

--- a/todo.html
+++ b/todo.html
@@ -30,6 +30,8 @@
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
+Go to programming lecture</li>
+<li><input type="checkbox" disabled="" />
 Blender Character Creator v2.0 for Video Games Design Course</li>
 <li><input type="checkbox" disabled="" />
 Complete Blender Creator 3: Learn 3D Modelling for Beginners</li>
