--- a/todo.html
+++ b/todo.html
@@ -31,7 +31,7 @@
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul class="task-list">
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Go to programming lecture</li>
 <li><input type="checkbox" disabled="" />
 Blender Character Creator v2.0 for Video Games Design Course</li>
