--- a/todo.html
+++ b/todo.html
@@ -44,7 +44,7 @@
 Go to programming lecture</li>
 <li><input type="checkbox" disabled="" checked="" />
 Go for a long walk early</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Do oblig 1</li>
 <li><input type="checkbox" disabled="" />
 Blender Character Creator v2.0 for Video Games Design Course</li>
