--- a/todo.html
+++ b/todo.html
@@ -61,7 +61,7 @@ Read a book 20 minutes</li>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" checked="" />
 Compulsory 1 -&gt; 1-september-2023 #programming-I</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Oblig 1 -&gt; 18-september-2023 #mathematics-I</li>
 <li><input type="checkbox" disabled="" />
 Compulsory 1 -&gt; 22-september-2023 #intro-3d</li>
