--- a/todo.html
+++ b/todo.html
@@ -37,6 +37,20 @@
 
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
+<ul class="task-list">
+<li><input type="checkbox" disabled="" />
+Go to mathematics lecture</li>
+<li><input type="checkbox" disabled="" />
+Go for a long walk early</li>
+<li><input type="checkbox" disabled="" />
+Blender Character Creator v2.0 for Video Games Design Course</li>
+<li><input type="checkbox" disabled="" />
+Complete Blender Creator 3: Learn 3D Modelling for Beginners</li>
+<li><input type="checkbox" disabled="" />
+Make a game related GitHub commit</li>
+<li><input type="checkbox" disabled="" />
+Read a book 20 minutes</li>
+</ul>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul class="task-list">
@@ -46,16 +60,16 @@ Go to programming lecture</li>
 Go for a long walk early</li>
 <li><input type="checkbox" disabled="" checked="" />
 Do oblig 1</li>
-<li><input type="checkbox" disabled="" />
-Blender Character Creator v2.0 for Video Games Design Course</li>
-<li><input type="checkbox" disabled="" />
-Complete Blender Creator 3: Learn 3D Modelling for Beginners</li>
-<li><input type="checkbox" disabled="" />
-Piano4All</li>
-<li><input type="checkbox" disabled="" />
-Make a game related GitHub commit</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Read a book 20 minutes</li>
+<li><input type="checkbox" disabled="" checked="" />
+Blender Character Creator v2.0 for Video Games Design Course</li>
+<li><input type="checkbox" disabled="" checked="" />
+Complete Blender Creator 3: Learn 3D Modelling for Beginners</li>
+<li><input type="checkbox" disabled="" checked="" />
+Piano4All</li>
+<li><input type="checkbox" disabled="" checked="" />
+Make a game related GitHub commit</li>
 </ul>
 <h1 id="due-dates">Due dates</h1>
 <ul class="task-list">
