--- a/todo.html
+++ b/todo.html
@@ -42,7 +42,7 @@
 <ul class="task-list">
 <li><input type="checkbox" disabled="" checked="" />
 Go to mathematics lecture</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Go for a long walk early</li>
 <li><input type="checkbox" disabled="" />
 Blender Character Creator v2.0 for Video Games Design Course</li>
