Added items to inbox

--- a/todo.html
+++ b/todo.html
@@ -37,6 +37,12 @@
 
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
+<ul class="task-list">
+<li><input type="checkbox" disabled="" />
+Blender for Beginners: Easy Froggy! https://www.youtube.com/watch?v=rEBwBrRzyhw</li>
+<li><input type="checkbox" disabled="" />
+Blender Basics - Subdivision Surface Modifier Tutorial https://www.youtube.com/watch?v=NAwf0Tuuwjw</li>
+</ul>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul class="task-list">
