--- a/todo.html
+++ b/todo.html
@@ -39,9 +39,9 @@
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
-Blender for Beginners: Easy Froggy! https://www.youtube.com/watch?v=rEBwBrRzyhw</li>
+Blender for Beginners: Easy Froggy! <a href="https://www.youtube.com/watch?v=rEBwBrRzyhw">https://www.youtube.com/watch?v=rEBwBrRzyhw</a></li>
 <li><input type="checkbox" disabled="" />
-Blender Basics - Subdivision Surface Modifier Tutorial https://www.youtube.com/watch?v=NAwf0Tuuwjw</li>
+Blender Basics - Subdivision Surface Modifier Tutorial <a href="https://www.youtube.com/watch?v=NAwf0Tuuwjw">https://www.youtube.com/watch?v=NAwf0Tuuwjw</a></li>
 </ul>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
@@ -50,9 +50,9 @@ Blender Basics - Subdivision Surface Modifier Tutorial https://www.youtube.com/w
 Go to mathematics lecture</li>
 <li><input type="checkbox" disabled="" checked="" />
 Go for a long walk early</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Blender Character Creator v2.0 for Video Games Design Course</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Complete Blender Creator 3: Learn 3D Modelling for Beginners</li>
 <li><input type="checkbox" disabled="" />
 Make a game related GitHub commit</li>
