--- a/todo.html
+++ b/todo.html
@@ -42,6 +42,18 @@
 Blender for Beginners: Easy Froggy! <a href="https://www.youtube.com/watch?v=rEBwBrRzyhw">https://www.youtube.com/watch?v=rEBwBrRzyhw</a></li>
 <li><input type="checkbox" disabled="" />
 Blender Basics - Subdivision Surface Modifier Tutorial <a href="https://www.youtube.com/watch?v=NAwf0Tuuwjw">https://www.youtube.com/watch?v=NAwf0Tuuwjw</a></li>
+<li><input type="checkbox" disabled="" />
+Piano4All</li>
+<li><input type="checkbox" disabled="" />
+Blender Character Creator v2.0 for Video Games Design Course</li>
+<li><input type="checkbox" disabled="" />
+Complete Blender Creator 3: Learn 3D Modelling for Beginners</li>
+<li><input type="checkbox" disabled="" />
+Fix delete cube bug</li>
+<li><input type="checkbox" disabled="" />
+Do Modern Graphics Programming files</li>
+<li><input type="checkbox" disabled="" />
+Read a book 20 minutes</li>
 </ul>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
@@ -54,9 +66,9 @@ Go for a long walk early</li>
 Blender Character Creator v2.0 for Video Games Design Course</li>
 <li><input type="checkbox" disabled="" checked="" />
 Complete Blender Creator 3: Learn 3D Modelling for Beginners</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Make a game related GitHub commit</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Read a book 20 minutes</li>
 </ul>
 <h1 id="due-dates">Due dates</h1>
