Added more homework

--- a/todo.html
+++ b/todo.html
@@ -40,6 +40,10 @@
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
 Compulsory 1 -&gt; 22-september-2023 #intro-3d</li>
+<li><input type="checkbox" disabled="" />
+Derivation Week 37 mathematics-I</li>
+<li><input type="checkbox" disabled="" />
+Exam Practice Mathematics</li>
 </ul>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
