Made new items in inbox

--- a/todo.html
+++ b/todo.html
@@ -44,10 +44,20 @@ Compulsory 1 -&gt; 22-september-2023 #intro-3d</li>
 Derivation Week 37 mathematics-I</li>
 <li><input type="checkbox" disabled="" />
 Exam Practice Mathematics</li>
+<li><input type="checkbox" disabled="" />
+Make wash water</li>
+<li><input type="checkbox" disabled="" />
+Wash bathroom floor</li>
+<li><input type="checkbox" disabled="" />
+Wash bathroom walls</li>
+<li><input type="checkbox" disabled="" />
+Wash bathroom sink</li>
 </ul>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul class="task-list">
+<li><input type="checkbox" disabled="" />
+Wash shoes</li>
 <li><input type="checkbox" disabled="" />
 Blender for Beginners: Easy Froggy! <a href="https://www.youtube.com/watch?v=rEBwBrRzyhw">https://www.youtube.com/watch?v=rEBwBrRzyhw</a></li>
 <li><input type="checkbox" disabled="" />
