--- a/todo.html
+++ b/todo.html
@@ -56,11 +56,11 @@ Wash bathroom sink</li>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul class="task-list">
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Wash shoes</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Blender for Beginners: Easy Froggy! <a href="https://www.youtube.com/watch?v=rEBwBrRzyhw">https://www.youtube.com/watch?v=rEBwBrRzyhw</a></li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Blender Basics - Subdivision Surface Modifier Tutorial <a href="https://www.youtube.com/watch?v=NAwf0Tuuwjw">https://www.youtube.com/watch?v=NAwf0Tuuwjw</a></li>
 <li><input type="checkbox" disabled="" />
 Go to 3d lecture</li>
