--- a/todo.html
+++ b/todo.html
@@ -37,7 +37,8 @@
 
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
-<ul class="task-list">
+<ul>
+<li>[] Watch 5 Modeling Tools You Need To Make ANYTHING in Blender <a href="https://www.youtube.com/watch?v=kejQ8nX5YZA">https://www.youtube.com/watch?v=kejQ8nX5YZA</a></li>
 <li><input type="checkbox" disabled="" />
 Compulsory 1 -&gt; 22-september-2023 #intro-3d</li>
 <li><input type="checkbox" disabled="" />
@@ -62,7 +63,7 @@ Wash shoes</li>
 Blender for Beginners: Easy Froggy! <a href="https://www.youtube.com/watch?v=rEBwBrRzyhw">https://www.youtube.com/watch?v=rEBwBrRzyhw</a></li>
 <li><input type="checkbox" disabled="" checked="" />
 Blender Basics - Subdivision Surface Modifier Tutorial <a href="https://www.youtube.com/watch?v=NAwf0Tuuwjw">https://www.youtube.com/watch?v=NAwf0Tuuwjw</a></li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Go to 3d lecture</li>
 <li><input type="checkbox" disabled="" />
 Go for a long walk early</li>
