--- a/todo.html
+++ b/todo.html
@@ -37,8 +37,9 @@
 
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
-<ul>
-<li>[] Watch 5 Modeling Tools You Need To Make ANYTHING in Blender <a href="https://www.youtube.com/watch?v=kejQ8nX5YZA">https://www.youtube.com/watch?v=kejQ8nX5YZA</a></li>
+<ul class="task-list">
+<li><input type="checkbox" disabled="" />
+Watch 5 Modeling Tools You Need To Make ANYTHING in Blender <a href="https://www.youtube.com/watch?v=kejQ8nX5YZA">https://www.youtube.com/watch?v=kejQ8nX5YZA</a></li>
 <li><input type="checkbox" disabled="" />
 Compulsory 1 -&gt; 22-september-2023 #intro-3d</li>
 <li><input type="checkbox" disabled="" />
