--- a/todo.html
+++ b/todo.html
@@ -25,6 +25,11 @@
 			.jsCalendar tbody td.jsCalendar-colorful-orange {border-color: #FFB400;}
 			.jsCalendar tbody td.jsCalendar-colorful-red {border-color: #F6511D;}
 			.jsCalendar tbody td.jsCalendar-colorful-green {border-color: #7FB800;}
+
+.week {
+color: #1EAEDB;
+}
+
 		</style>
 
 	</head>
@@ -196,7 +201,7 @@ Written exam -&gt; 11-december-2023 #mathematics-I</li>
 				}
 			};
 
-            function makeCalc(month)
+            function makeCal(month)
             {
                 var element = document.getElementById('calendar');
                 month = month - 1;
@@ -258,11 +263,75 @@ Written exam -&gt; 11-december-2023 #mathematics-I</li>
                 }
             }
 
-            makeCalc(8);  // August
-            makeCalc(9);  // September
-            makeCalc(10); // October
-            makeCalc(11); // November
-            makeCalc(12); // December
+            makeCal(8);  // August
+            makeCal(9);  // September
+            makeCal(10); // October
+            makeCal(11); // November
+            makeCal(12); // December
+
+
+function addWeekColumn(calendar)
+{
+    const firstElement = document.querySelector("#calendar \> table:nth-child\(" + calendar + "\) \> thead \> tr.jsCalendar-week-days \> th:nth-child\(1\)")
+    const para = document.createElement("td");
+    para.className = "week";
+    const node = document.createTextNode("Week");
+    para.appendChild(node);
+    const e = document.querySelector("#calendar \> table:nth-child\(" + calendar + "\) \> thead \> tr.jsCalendar-week-days")
+    e.insertBefore(para, firstElement);
+}
+
+function addWeekNumber(calendar, row, week)
+{
+    const firstElement = document.querySelector("\#calendar \> table:nth-child\(" + calendar + "\) \> tbody \> tr:nth-child\(" + row + "\) \> td:nth-child\(1\)")
+    const para = document.createElement("td");
+    para.className = "week";
+    node = document.createTextNode(week);
+    para.appendChild(node);
+    const e = document.querySelector("#calendar \> table:nth-child\(" + calendar + "\) \> tbody \> tr:nth-child\(" + row + "\)")
+    e.insertBefore(para, firstElement);
+}
+
+addWeekColumn(1);
+addWeekColumn(2);
+addWeekColumn(3);
+addWeekColumn(4);
+addWeekColumn(5);
+
+addWeekNumber(1, 1, 31);
+addWeekNumber(1, 2, 32);
+addWeekNumber(1, 3, 33);
+addWeekNumber(1, 4, 34);
+addWeekNumber(1, 5, 35);
+addWeekNumber(1, 6, 36);
+
+addWeekNumber(2, 1, 35);
+addWeekNumber(2, 2, 36);
+addWeekNumber(2, 3, 37);
+addWeekNumber(2, 4, 38);
+addWeekNumber(2, 5, 39);
+addWeekNumber(2, 6, 40);
+
+addWeekNumber(3, 1, 39);
+addWeekNumber(3, 2, 40);
+addWeekNumber(3, 3, 41);
+addWeekNumber(3, 4, 42);
+addWeekNumber(3, 5, 43);
+addWeekNumber(3, 6, 44);
+
+addWeekNumber(4, 1, 44);
+addWeekNumber(4, 2, 45);
+addWeekNumber(4, 3, 46);
+addWeekNumber(4, 4, 47);
+addWeekNumber(4, 5, 48);
+addWeekNumber(4, 6, 49);
+
+addWeekNumber(5, 1, 48);
+addWeekNumber(5, 2, 49);
+addWeekNumber(5, 3, 50);
+addWeekNumber(5, 4, 51);
+addWeekNumber(5, 5, 52);
+addWeekNumber(5, 6, 53);
 
 
 
