Changing week colour to gray

--- a/todo.html
+++ b/todo.html
@@ -27,7 +27,8 @@
 			.jsCalendar tbody td.jsCalendar-colorful-green {border-color: #7FB800;}
 
 .week {
-color: #1EAEDB;
+color: #888;
+border-color: #888;
 }
 
 		</style>
