--- a/todo.html
+++ b/todo.html
@@ -27,8 +27,7 @@
 			.jsCalendar tbody td.jsCalendar-colorful-green {border-color: #7FB800;}
 
 .week {
-color: #888;
-border-color: #888;
+color: #BEBEBE;
 }
 
 		</style>
