--- a/todo.html
+++ b/todo.html
@@ -38,7 +38,7 @@ color: #BEBEBE;
 	<body>
     <div class="container">
       <div class="row">
-        <div class="seven columns" style="margin-top: 15%">
+        <div class="six columns" style="margin-top: 15%">
 
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
@@ -116,7 +116,7 @@ Written exam -&gt; 11-december-2023 #mathematics-I</li>
 <h6 id="organize-each-day-triage.-then-weekly-big-picture">Organize each day (triage). Then weekly (big picture)</h6>
 
         </div>
-        <div class="five columns portrait" style="margin-top: 15%">
+        <div class="six columns portrait" style="margin-top: 15%">
 
 
 <div id="calendar"></div>
