Updated plan again at last

--- a/todo.html
+++ b/todo.html
@@ -40,21 +40,33 @@
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
-Watch 5 Modeling Tools You Need To Make ANYTHING in Blender <a href="https://www.youtube.com/watch?v=kejQ8nX5YZA">https://www.youtube.com/watch?v=kejQ8nX5YZA</a></li>
+Clean kitchen #home</li>
+<li><input type="checkbox" disabled="" />
+Make wash water #home</li>
+<li><input type="checkbox" disabled="" />
+Wash bathroom floor #home</li>
+<li><input type="checkbox" disabled="" />
+Wash bathroom walls #home</li>
+<li><input type="checkbox" disabled="" />
+Wash bathroom sink #home</li>
+<li><input type="checkbox" disabled="" />
+Go for a long walk early #health</li>
 <li><input type="checkbox" disabled="" />
 Compulsory 1 -&gt; 22-september-2023 #intro-3d</li>
 <li><input type="checkbox" disabled="" />
-Derivation Week 37 mathematics-I</li>
+Derivation Week 37 mathematics-I #mathematic</li>
 <li><input type="checkbox" disabled="" />
-Exam Practice Mathematics</li>
+Fix delete cube bug #programming</li>
 <li><input type="checkbox" disabled="" />
-Make wash water</li>
+Write solve polynomial code #programming</li>
 <li><input type="checkbox" disabled="" />
-Wash bathroom floor</li>
+Do Modern Graphics Programming files #programming</li>
 <li><input type="checkbox" disabled="" />
-Wash bathroom walls</li>
+Read a book 20 minutes #recreation</li>
 <li><input type="checkbox" disabled="" />
-Wash bathroom sink</li>
+Meditate for 20 minutes #health</li>
+<li><input type="checkbox" disabled="" />
+Exam Practice Mathematics #mathematics</li>
 </ul>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
@@ -67,20 +79,22 @@ Blender for Beginners: Easy Froggy! <a href="https://www.youtube.com/watch?v=rEB
 Blender Basics - Subdivision Surface Modifier Tutorial <a href="https://www.youtube.com/watch?v=NAwf0Tuuwjw">https://www.youtube.com/watch?v=NAwf0Tuuwjw</a></li>
 <li><input type="checkbox" disabled="" checked="" />
 Go to 3d lecture</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Go for a long walk early</li>
+<li><input type="checkbox" disabled="" checked="" />
+Watch 5 Modeling Tools You Need To Make ANYTHING in Blender <a href="https://www.youtube.com/watch?v=kejQ8nX5YZA">https://www.youtube.com/watch?v=kejQ8nX5YZA</a></li>
+</ul>
+<h1 id="long-term-plan">Long term plan</h1>
+<h6 id="update-weekly">Update Weekly</h6>
+<ul class="task-list">
 <li><input type="checkbox" disabled="" />
-Piano4All</li>
+Complete Piano4All</li>
 <li><input type="checkbox" disabled="" />
-Blender Character Creator v2.0 for Video Games Design Course</li>
+Complete Blender Character Creator v2.0 for Video Games Design Course</li>
 <li><input type="checkbox" disabled="" />
 Complete Blender Creator 3: Learn 3D Modelling for Beginners</li>
 <li><input type="checkbox" disabled="" />
-Fix delete cube bug</li>
-<li><input type="checkbox" disabled="" />
-Do Modern Graphics Programming files</li>
-<li><input type="checkbox" disabled="" />
-Read a book 20 minutes</li>
+Complete Semester 1 Game School</li>
 </ul>
 <h1 id="due-dates">Due dates</h1>
 <ul class="task-list">
